--- a/page/requirements.txt
+++ b/page/requirements.txt
@@ -8,6 +8,6 @@ mkdocs==1.0.4
 mkdocs-material==3.2.0
 Pygments==2.3.1
 pymdown-extensions==6.0
-PyYAML==3.13
+PyYAML>=4.2b1
 six==1.12.0
 tornado==5.1.1
